# skills

./: .gitignore  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.githooks/: pre-push
.github/workflows/: ci.yml
.specs/: README.md  development-guidelines.md  spec.md
.specs/benchmark/: README.md
.specs/changes/: 2026-06-05-kanban_plan_folder_layout.md
.specs/evaljudge/: README.md
benchmark/: README.md  __init__.py
benchmark/harness/: __init__.py  domain.py  run_container_check.py  run_local_demo.py  substrate.py
benchmark/suites/: __init__.py  greenfield.py  greenfield_images.py  local_fixture.py
benchmark/tests/: __init__.py  test_a1_pipeline.py  test_a2_a3_arms.py  test_a4_arm.py  test_a5_arm.py  test_ablation_metric_results.py  test_ablation_report.py  test_artifact_metrics.py  test_backends.py  test_conformance.py  test_container_run.py  test_container_scoring.py  test_cost_matched_delta.py  test_cost_robustness.py  test_domain.py  test_driver.py  test_gate_escape_population.py  test_gate_probes.py  test_greenfield_suite.py  test_intra_trial_timing.py  test_live_container.py  test_local_fixture_suite.py  test_local_run.py  test_local_scoring.py  test_run_local_demo.py  test_skill_docs.py  test_smoke.py  test_stats.py  test_substrate.py  test_telemetry.py
docs/: README.md  multi-harness-skills.md
docs/benchmark/: README.md
docs/evaljudge/: README.md
docs/specs/: development-guidelines.md  spec.md
plugins/jj-workspaces/: README.md
plugins/reasoning-semiformally/: README.md
plugins/spec-builder/: README.md
reasoning-semiformally/: SKILL.md
scripts/: check.sh  sync-skills.sh
skills/: README.md
spec-creator/: SKILL.md
(+449 files in other folders)
