[project]
name = "benchmark"
version = "0.1.0"
description = "Spec-workflow benchmark harness (Docker-free skeleton)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["benchmark/tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
