[project]
name = "benchmark"
version = "0.1.0"
description = "Spec-workflow benchmark harness (Docker-free skeleton)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "benchflow>=0.4.0",
    "jsonschema>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["benchmark/tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"
extend-exclude = ["benchmark/suites/benchflow-probe"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["benchmark"]
exclude = [
    "benchmark/tests",
    "benchmark/suites/local-fixture/repo",
    "benchmark/suites/greenfield-features/*/repo",
    "benchmark/suites/benchflow-probe",
    "**/__pycache__",
]
pythonVersion = "3.13"
typeCheckingMode = "standard"
